[package]
name = "muds"
version = "0.1.2"
edition = "2021"
rust-version = "1.60"
authors = ["Andy K. S. Wong <andykswong@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/andykswong/muge"
homepage = "https://github.com/andykswong/muge/tree/main/crates/muds"
documentation = "https://docs.rs/muds"
description = "Minimalistic Data Structures and Entity-Component-System Library"
categories = ["data-structures", "game-development", "game-engines", "no-std"]
keywords = ["ecs", "entity", "gamedev"]

[package.metadata.docs.rs]
features = ["std", "serde", "derive"]

[dependencies]
muds-derive = { path = "muds-derive", version = "0.1", optional = true }
num = { version = "0.4", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc", "derive"] }

[dev-dependencies]
muds-derive = { path = "muds-derive", version = "0.1" }
munum = { path = "../munum", version = "0.1" }
criterion = "0.3"
serde_json = "1.0"

[features]
default = ["std"]
std = ["serde?/std"]
derive = ["muds-derive"]
index-u64 = []

[[bench]]
name = "ecs"
harness = false
required-features = ["derive"]
