[package]
name = "mugltf"
version = "0.1.3"
edition = "2021"
rust-version = "1.60"
authors = ["Andy K. S. Wong <andykswong@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/andykswong/muge"
homepage = "https://github.com/andykswong/muge/tree/main/crates/mugltf"
documentation = "https://docs.rs/mugltf"
description = "Minimal glTF 2.0 asset loader for Rust"
categories = ["graphics", "parsing", "rendering::data-formats", "wasm"]
keywords = ["3d", "asset", "gltf", "scene", "muge"]

[package.metadata.docs.rs]
features = ["std", "serde", "fetch-loader", "file-loader", "gltf-name", "gltf-extras", "gltf-extensions"]

[dependencies]
mugl = { path = "../mugl", version = "0.1", default-features = false }
async-trait = "0.1"
data-url = { version = "0.1", optional = true }
image = { version = "0.24", optional = true, default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
serde_repr = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true, default-features = false }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
base64 = { version = "0.13", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  'Document',
  'Element',
  'Headers',
  'HtmlImageElement',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[dev-dependencies]
assert-json-diff = "2.0"
pollster = "0.2"
wasm-bindgen-test = "0.3"

[features]
default = ["std", "serde", "gltf-name"]
std = [
    "serde_json?/std",
    "wasm-bindgen?/std"
]
serde = [
    "dep:serde",
    "serde_repr",
    "serde_json",
    "mugl/serde"
]
file-loader = ["std", "data-url", "image"]
fetch-loader = [
  "std",
  "base64",
  "wasm-bindgen",
  "js-sys",
  "web-sys",
  "wasm-bindgen-futures"
]
gltf-name = []
gltf-extras = []
gltf-extensions = []
