[package]
name = "munum"
version = "0.1.2"
edition = "2021"
authors = ["Andy K. S. Wong <andykswong@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/andykswong/muge"
homepage = "https://github.com/andykswong/muge/tree/main/crates/munum"
documentation = "https://docs.rs/munum"
description = "Rust Micro Library for 3D Math"
categories = ["mathematics", "no-std", "wasm"]
keywords = ["math", "matrix", "3d", "muge"]

[package.metadata.docs.rs]
features = ["std", "serde"]

[features]
default = ["std"]
std = [
    "num/std"
]
libm = [
    "num/libm"
]

[dependencies]
num = { version = "0.4", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
